--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
         </div>
 
         <div class="donation-section">
-            <h3>Support Women's Rights Organizations</h3>
-            <p>Consider donating to organizations working for gender equality and women's empowerment.</p>
-            <a href="https://www.unwomen.org/en/donate" target="_blank" class="donate-btn">Donate to UN Women</a>
+            <h3>Buy me a coffee☕</h3>
+            <p>Consider donating to support my work 💜</p>
+            <a href="https://www.paypal.com/donate/?hosted_button_id=BYAJN73T8TXBY" target="_blank" class="donate-btn">PayPal Donation</a>
         </div>
     </div>
 
