Update PayPal donation link to be empty

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <div class="donation-section">
             <h3>Buy me a coffee☕</h3>
             <p>Consider donating to support my work 💜</p>
-            <a href="https://www.paypal.com/donate/?hosted_button_id=BYAJN73T8TXBY" target="_blank" class="donate-btn">PayPal Donation</a>
+            <a href="" target="_blank" class="donate-btn">PayPal Donation</a>
         </div>
     </div>
 
